<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.RegisterScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/txt_addPerson"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/et_qrscan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/bg_input"
                        android:hint="@string/txt_qrscan"
                        android:inputType="textPersonName"
                        android:padding="16dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/red"
                        android:textSize="16sp"
                        android:autofillHints="" />
                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/bg_input"
                        android:hint="@string/txt_name"
                        android:inputType="textPersonName"
                        android:padding="16dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/red"
                        android:textSize="16sp" />
                    <EditText
                        android:id="@+id/et_empresar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/bg_input"
                        android:hint="@string/txt_empresa"
                        android:inputType="textPersonName"
                        android:padding="16dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/red"
                        android:textSize="16sp" />
                    <EditText
                        android:id="@+id/et_correo1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/bg_input"
                        android:hint="@string/txt_email1"
                        android:inputType="textPersonName"
                        android:padding="16dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/red"
                        android:textSize="16sp" />
                    <EditText
                        android:id="@+id/et_correo2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/bg_input"
                        android:hint="@string/txt_email2"
                        android:inputType="textPersonName"
                        android:padding="16dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/red"
                        android:textSize="16sp" />
                    <EditText
                        android:id="@+id/et_telf1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/bg_input"
                        android:hint="@string/txt_phone1"
                        android:inputType="textPersonName"
                        android:padding="16dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/red"
                        android:textSize="16sp" />
                    <EditText
                        android:id="@+id/et_telf2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/bg_input"
                        android:hint="@string/txt_phone2"
                        android:inputType="textPersonName"
                        android:padding="16dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/red"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/et_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/bg_input"
                        android:hint="@string/txt_info"
                        android:inputType="number"
                        android:padding="16dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/red"
                        android:textSize="16sp" />
                    <EditText
                        android:id="@+id/et_comentarios"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/bg_input"
                        android:hint="@string/txt_coment"
                        android:inputType="textPersonName"
                        android:padding="16dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/red"
                        android:textSize="16sp" />
                    <EditText
                        android:id="@+id/et_agrx"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/bg_input"
                        android:hint="@string/txt_agrx"
                        android:inputType="textPersonName"
                        android:padding="16dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/red"
                        android:textSize="16sp" />
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/bg_button"
                        android:text="@string/txt_register"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="40dp"/>
                </LinearLayout>
            </ScrollView>
    </LinearLayout>

</LinearLayout>